Bug 377593 - c++ Import does not recognize destructor
Summary: c++ Import does not recognize destructor
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.21.2 (KDE Applications 16.12.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-14 03:29 UTC by Ralf Habacker
Modified: 2017-03-14 10:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.21.80 (KDE Applications 17.03.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2017-03-14 03:29:32 UTC
After importing a c++ class containing a destructor the imported destructor methode is not marked as "destructor".
  
How to reproduce:
1. start umbrello
2. Import the following code fragment 

class Test { public: Test(); ~Test(); };

3. Open property dialog of generated method "~ Test"

What happens ?
The stereotype "destructor" is missing

What is expected ?
The destructor method should have a stereotype "destructor"
Comment 1 Ralf Habacker 2017-03-14 10:35:47 UTC
Git commit 9dbc282c1e5b89f777b7c34b693b0c62a89cd5cb by Ralf Habacker.
Committed on 14/03/2017 at 10:35.
Pushed by habacker into branch 'master'.

Fix 'c++ Import does not recognize destructor'.
FIXED-IN:2.21.80 (KDE Applications 17.03.80)

M  +1    -1    umbrello/codeimport/adaimport.cpp
M  +1    -1    umbrello/codeimport/csharp/csharpimport.cpp
M  +1    -1    umbrello/codeimport/idlimport.cpp
M  +4    -1    umbrello/codeimport/import_utils.cpp
M  +1    -1    umbrello/codeimport/import_utils.h
M  +1    -1    umbrello/codeimport/javaimport.cpp
M  +17   -6    umbrello/codeimport/kdevcppparser/cpptree2uml.cpp
M  +8    -3    umbrello/codeimport/pascalimport.cpp
M  +1    -1    umbrello/codeimport/pythonimport.cpp

https://commits.kde.org/umbrello/9dbc282c1e5b89f777b7c34b693b0c62a89cd5cb