Fix 'c++ Import does not recognize destructor'.

BUG:377593
FIXED-IN:2.21.80 (KDE Applications 17.03.80)